# laboratorios-ie0417

./: .gitignore  README.md
.github/workflows/: main.yml
Laboratorio6/: README.md  barrier.cpp  consideRendimiento.cpp  deadlock.cpp  mutex.cpp  raceCondition.cpp  semaforos.cpp  variableCondicion.cpp
laboratorio7/: README.md  breakpoints.cs  scriptASan.cpp  scriptGDB.cpp  scriptHelgrindCorregido.cpp  scriptMemcheck.cpp  scriptTsanHelgrind.cpp  scriptValgrind.cpp  tiposErrores.cpp
laboratorio8/: CMakeLists.txt  README.md  authentication.h  calculator.h  database.h  main_random.cpp  mock_database.h  random_utils.h  semilla.cpp  test_authentication.cpp  test_calculator.cpp  test_seed.cpp
